--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@npmcli/fs": "^3.1.0",
+    "@npmcli/move-file": "^3.0.0",
     "bootstrap": "^5.3.2",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
